--- a/docs/_posts/2024-07-17-关于新的 blog.md
+++ b/docs/_posts/2024-07-17-关于新的 blog.md
@@ -1,10 +1,11 @@
 ---
 layout: post
 title: "关于新的 blog"
-date: 2024-06-16
+date: 2024-07-17
 categories: 
 tags: 
 ---
+%%关于新的 blog%%
 
 以前的 blog 一直部署在腾讯云的服务器上，用的是 halo 某个低版本做的 docker，现在一方面因为续费服务器太过昂贵，另一方面也是不想继续用 halo 了，所以选择了现在的 Github Page + Jekyll 的方案。
 
